assets/css/style.css
/* Theme presets */

  /* 
    --font-color can be used as setting colors for text, svg fill color or font icons.
    
    --accent-primary can be used as form element (button, checkbox, text box, etc.) border or background color.

    --accent-secondary can be used to show interactivity like hover state, focus, or active / selected element.

    --bg-color is for body background

    --background-primary is to use for the background of specific element like prise picker

    --background-secondary is to use for showing interactivity with elements using primary background
  */

.light-theme {
  --clr-foreground: 255 100% 0%;
  --clr-background: 0, 0%, 100%;
  --clr-white: 0 0% 100%;
  --primary-color: 242, 79%, 77%;
  --secondary-color: 224, 20%, 59%;
  --primary-font-color: 214, 11%, 12%;
  --secondary-font-color: 0, 0%, 45%;
  --hero-bg-color: 38, 22%, 90%;
  --bg-color: 31, 100%, 90%;

  --font-color: 255 100% 0%; 
}

.dark-theme {
  --clr-foreground: 0 0% 100%;
  --clr-background: 0 0% 0%;
  --clr-white: 0 0% 100%;
  --primary-color: 268, 60%, 52%;
  --secondary-color: 224, 27%, 45%;
  --primary-font-color: 0, 100%, 100%;
  --secondary-font-color: 0, 0%, 45%;
  --hero-bg-color: 220, 23%, 5%;
  --bg-color: 215, 21%, 11%;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}
body {
  font-family: sans-serif;
  background-color: hsla(var(--bg-color), 1);
  color: hsla(var(--primary-font-color), 1);
  font-size: calc(1rem + 0.25vh);
  min-height: 100vh;

}
/* utility Class */
.flex {
  display: flex;
  gap: var(--gap, 1rem);
}

.grid {
  display: grid;
  gap: var(--gap, 1rem);
}
.d-block {
  display: block;
}

.container {
  padding-inline: 2em;
  margin-inline: auto;
  max-width: 80rem;
}
.uppercase{
  text-transform: uppercase;
}
/* Nav bar */




/* Primary header */

.primary-header {
  top: 0;
  width: 100%;
  position: sticky;
  align-content: center;
  justify-content: space-between;
  transition-property: background-color, color;
  transition-duration: 0.5s;
  transition-timing-function: ease-out;
}
.primary-header nav {
  align-self: center;
}

.mobile-nav-toggle {
  display: none;
}
.primary-navigation {
  list-style: none;
  padding: 0;
  margin: 0;
}
.primary-header-scrolled {
  background-color: hsla(var(--clr-background));

}

.primary-navigation a {
  text-decoration: none;
  color:hsl(var(--clr-foreground));
}
.underline-indicators > li {
  padding: var(--underline-gap, 2rem) 0;
}
.underline-indicators > li:hover,
.underline-indicators > li:focus {
  padding: var(--underline-gap, 2rem) 0;
  border-bottom: 0.2rem solid hsla(var(--clr-foreground) / .25)
}
.underline-indicators > .active{
  border-color: hsl(var(--clr-white) / 1 );
  border-bottom: 0.2rem solid hsla(var(--clr-foreground))
}



@media (min-width: 35em) {
  .primary-navigation {
    --gap: clamp(1.5rem, 5vh, 3rem);
    padding-inline: clamp(3rem, 5vw, 10rem);
  }
  
}

@media (min-width: 35em) and (max-width: 55em) {
  
}

@media (max-width: 35em) {
  .primary-navigation {
    --underline-gap: 1rem;
    position: fixed;
    z-index: 1000;
    inset: 0 0 0 30%;
    flex-direction: column;
    padding: min(30vh, 10rem) 2em;
    transform: translateX(100%);
    transition: transform 350ms ease-out;
    background: hsla(var(--clr-background), 0.1);
    backdrop-filter: blur(1rem);
  }
  @supports (backdrop-filter: blur(1rem)) {
    .primary-navigation {
      backdrop-filter: blur(1rem);
    }
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0%);
  }

  .mobile-nav-toggle {
    display: block;
    position: absolute;
    z-index: 9999;
    background-color: transparent;
    width: 2em;
    background-repeat: no-repeat;
    aspect-ratio: 1;
    border: 0;
    top: 2rem;
    right: 2rem;
  }
  .mobile-nav-toggle svg{
    fill: hsl(var(--clr-foreground));
  }
}


/* theme switch css */

#theme-toggle {
  cursor: pointer;
  background: 0;
  border: 0;
  opacity: 0.8;
  border-radius: 50%;
  position: relative;
  isolation: isolate;
}

#theme-toggle svg {
  fill: hsl(var(--clr-foreground));
}

#theme-toggle::before {
  content: "";
  position: absolute;
  inset: 0;
  background: hsla(0, 0%, 50%, 0.2);
  border-radius: inherit;
  transform: scale(0);
  opacity: 0;
  z-index: -1;
}
#theme-toggle:hover {
  outline: 0;
  opacity: 1;
  background: hsla(0, 0%, 50%, 0.15);
}
.light-theme #theme-toggle::before {
  animation: pulseToLight 650ms ease-out;
}

.dark-theme #theme-toggle::before {
  animation: pulseToDark 650ms ease-out;
}



#theme-toggle:hover::after,
#theme-toggle:focus-visible::after {
  opacity: 0.7;
  transform: scale(1);
  transition: transform 70ms linear, opacity 70ms linear;
}

.toggle-circle {
  transition: transform 500ms ease-out;
}

.light-theme .toggle-circle {
  transform: translateX(-15%);
}

.toggle-sun {
  transform-origin: center center;
  transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
}

.light-theme .toggle-sun {
  transform: rotate(0.5turn);
}

@keyframes pulseToLight {
  0% {
    transform: scale(0);
    opacity: 0.5;
  }

  10% {
    transform: scale(1);
  }

  75% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    transform: scale(1);
  }
}

@keyframes pulseToDark {
  0% {
    transform: scale(0);
    opacity: 0.5;
  }

  10% {
    transform: scale(1);
  }

  75% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    transform: scale(1);
  }
}

/* hero section */
.content{
  max-width: 90%;
  margin: 0 auto;
}


@media (min-width: 35em) {
  .toggle-switch {
    margin: auto;
  }
}

@media (min-width: 35em) and (max-width: 55em) {}

@media (max-width: 35em) {
  
}

